<resources>
    <string name="app_name">FamyCheck</string>
    <string name="splash_logo">splash_logo</string>
    <string name="termsConditions">By using this app, you agree to our <a href='http://driverco.website2.me/famychecktermsconditions'>terms and conditions</a></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_famys">Famys</string>
    <string name="menu_check">Check In</string>
    <string name="go_to_famys_more_to_come">Go To Famys, more to come</string>
    <string name="view_members">View Members</string>
</resources>