<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.driverco.famycheck.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_famy"
        android:name="com.driverco.famycheck.ui.gallery.GalleryFragment"
        android:label="@string/menu_famys"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_check"
        android:name="com.driverco.famycheck.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_check"
        tools:layout="@layout/fragment_slideshow" />
</navigation>