<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:id="@+id/UserImageCardView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="left"
        app:cardCornerRadius="30dp"
        >
        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:scaleType="centerCrop"
            />

    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:orientation="vertical"
            android:layout_weight="10" >
        <TextView
            android:id="@+id/userDescrTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
            android:scaleType="fitCenter"
            android:layout_gravity="right"
            android:background="@null"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>